--- a/dzqd-flume/pom.xml
+++ b/dzqd-flume/pom.xml
@@ -58,12 +58,13 @@
       <artifactId>fluent-hc</artifactId>
       <version>4.5.2</version>
     </dependency>
-    <!--<dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.4</version>
-    </dependency>-->
+    </dependency>
   </dependencies>
+
   <build>
     <plugins>
 
